--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -1,7 +1,6 @@
 #labels Featured
 = Compile =
-The attached make file is for linux with gcc 4.2 or later. Because OpenMP are support after gcc 4.2, use an alternative makefile "(no openMP)" by remove the flag "-fopenmp". 
-The code has also been test compiled with visual c++ on a Win32 machine, without "openmp".
+The attached make file is for linux with gcc 4.2 or later. Because OpenMP are support after gcc 4.2, if your available compiler is earlier version, use an alternative makefile (no openMP) by remove the flag "-fopenmp", and only single CPU will be utilized. The code has also been test with visual c++ on a Win32 machine, without "openmp".
 
 = Options =
 PerM uses both a configuration file and command line options. The input and configuration files should be in the same path.  
@@ -56,3 +55,7 @@ The mapping results are printed in a `*`.mapping file which is named by concaten
   * Number of mismatches in the mapping. 
 
 Changes are expected in the near future for I/O and options standardization with other mapping programs, especially Applied Biosystems pipeline.
+
+= Paralleled mapping =
+ PerM simultaneously maps multiple reads sets in a list by querying the same index. It will detect how many CPU (cores) are available and assign each CPU a read set, if available. If a read set is finished, the next read set in the list will be assigned to the available CPU automatically. Each read set will have its own output file *.mapping. To better utilize all CPUs on a node, large reads are suggested to be split to many small read sets and put in the list. 
+  When multiple nodes are used in the same file system, the index should be pre-built first by one node; the other node will read the pre-built index with out building index again. Without pre-built index, each machine will try to build their own index, wasting CPU hours and may cause insufficiency of disk quota. 
