--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -10,20 +10,26 @@ The command line options include a reference, a data set, and sensitivity thresh
   # Reference File in FASTA format or a text file which lists many consecutive FASTA files.  
   # A read set in FASTA, PRB or CFSATA format or a text file which lists many read sets.  
   # An integer for the mapping sensitivity (ie. full sensitivity to 3 mismatches)
-
-  * Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 3}}}
-  * Ex: {{{./PerM_P HumanGenome.txt IlluminaReadSim2.txt 2}}}
+  # A flag "-A" if ALL mappings will be printed; "-E" if ambiguous reads and their mapping are EXCLUDED.
+  # An integer for the truncated read length, say 30. Leave blank if full read should be used.
+  * Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 3 -A}}}
+  * Ex: {{{./PerM_P HumanGenome.txt IlluminaReadSim2.txt 2 -E 30}}}
 ====Reference Files====
-PerM concatenates all input file names to generate the output file name.  If this causes  the length of the output file name to exceed the OS limit, rename and limit the length of the reference file names.
+PerM concatenates the reference and the read file names to generate the output file name. If this causes  the length of the output file name to exceed the OS limit, rename and limit the length of the reference file names.
 
 ====Read Files====
-PerM expects reads from either the SOLiD or Solexa sequencer. If the first read file has the  extension ".csfasta", then all reads are assumed to be from the SOLiD sequencer. Other file types are treated as Solexa data.  Read lengths are assumed to be equal to the first read in the first data file.
-
+PerM expects reads from either the SOLiD or Solexa sequencer. If the first read file has the  extension ".csfasta", then all reads are assumed to be from the SOLiD sequencer. Other file types are treated as Solexa data.  Read lengths are assumed to be equal to the first read in the first data file. 
 
 ====Full Sensitivity Thresholds====
-PerM supports full sensitivity for 2, 3, or 4 mismatches as well as sensitivity thresholds specific to the SOLiD sequencer which changes consecutive colors in the presence of a SNP.  The SOLiD specific sensitivity thresholds of  "one SNP candidate + 1 color error" and "two SNP candidates" are denoted as *11* and *20*. 
-  
-Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 11}}}
+PerM supports full sensitivity for 2, 3, or 4 mismatches as well as sensitivity thresholds specific to the SOLiD sequencer which changes consecutive colors in the presence of a SNP.  The SOLiD specific sensitivity thresholds of  "one SNP candidate + 1 color error" and "two SNP candidates" are denoted as *11* and *20*.  
+Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 11 -E}}}
+
+====Include or Exclude Ambiguous Mapping====
+The default setting will exclude the output of ambiguous reads. Use "-A" flag as the forth parameter to output all mappings. In this case, a maximum 100 mapping per read will be print consecutively in the output file. 
+
+====Quality Score Files====
+For SOLiD reads, PerM will try to read the quality file with the same base name as the read set file name, however with ".QUAL" or ".qual". That is, if the read file name is 7B.csfasta, the quality files should be named as 7B.QUAL and put beside the read file.
+If quality score file is not available, or the number of reads can't be matched, only the sequences will be used for mapping. 
 
 == Configuration File ==  
 A configuration file can be given as the only command line option. If no command line options are given PerM will attempt to open the default configuration file,  "config.pref". Following is an example of a configuration file as an attached zip file:
@@ -44,15 +50,14 @@ One can "grep" the summary info by redirect the standard output.
 ==Index==
 The genome-preprocessing version saves the reference index by default. It requires 4.5 bytes (one integer + 4 bits) + 256M memory for mapping. As always, the memory and disk should have enough capacity. 
 ==Mapping Results==
-The mapping results are printed in a `*`.mapping file which is named by concatenating the input files. Each line is the result of the best mapping (fewest mismatches). The info in each line is read in the following order:
-  * Read Tag (Extract from the previous line of the reads input file. If the tag is missing, a fake tag will be used.)
-  * Read Order(the order of the read in the read set, where reads with 'N' are skipped.)
+The mapping results are printed in a `*`.mapping file which is named by concatenating the input files. Each line is the result of the best mapping (fewest mismatches). The info in each line is read in the following order separated by tab:
+  * Read Tag (Extract from the previous line of the reads input file. If the tag is missing, a fake tag will be used.)  
   * The read sequence. For SOLiD reads, the first base from the agent (not in the reference) is eliminated from display. The first color signal is translated into a base for display.
   * Chromosome ID (begins at 0 and numbered according to the order in the reference list)
   * Chromosome Locus ID (the first position in each chromosome begins at 0) 
   * The mapped reference sequence. For SOLiD reads, this region is translated into colors for comparison to the read.
   * Positive (forward) or negative (backward) strand that the reads mapped to.
-  * Number of mismatches in the mapping. 
+  * Number of mismatches in the mapping or the sum of aligned quality scores if available. 
 
 Changes are expected in the near future for I/O and options standardization with other mapping programs, especially Applied Biosystems pipeline.
 
