--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -20,8 +20,8 @@ PerM concatenates the reference and the read file names to generate the output f
 ====Read Files====
 PerM expects reads from either the SOLiD or Solexa sequencer. If the first read file has the  extension ".csfasta", then all reads are assumed to be from the SOLiD sequencer. Other file types are treated as Solexa data.  Read lengths are assumed to be equal to the first read in the first data file. 
 
-For SOLiD reads, PerM will try to read the quality file with the same base name as the read set file name, however with the ext name ".QUAL" or ".qual". That is, if the read file name is 7B.csfasta, the quality files should be named as "7B.QUAL" and put beside the read file.
-If quality score file is not available, or the number of reads can't be matched, only the sequences will be used for mapping. 
+For SOLiD reads, PerM will try to read the quality file with the same base name as the read set, however with the ext name ".qual". That is, if the read file name is 7B.csfasta, its quality file "7B.qual" should be put beside.
+If quality score file is not available, or the reads and quality scores can't be matched, only the read sequences will be used. 
 
 ====Full Sensitivity Thresholds====
 PerM supports full sensitivity for 2, 3, or 4 mismatches as well as sensitivity thresholds specific to the SOLiD sequencer which changes consecutive colors in the presence of a SNP.  The SOLiD specific sensitivity thresholds of  "one SNP candidate + 1 color error" and "two SNP candidates" are denoted as *11* and *20*.  
