--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -8,14 +8,14 @@ PerM uses both a configuration file and command line options. The input and conf
 == Command Line Options ==  
 The command line options include a reference, a data set, and sensitivity threshold. They should be listed in the the following order: 
   # Reference File in FASTA format or a text file which lists many consecutive FASTA files.  
-  # A read set in FASTA, PRB or CFSATA format or a text file which lists many read sets.  
+  # A read set in FASTA, PRB or CSFASTA format or a text file which lists many read sets.  
   # An integer for the mapping sensitivity (ie. full sensitivity to 3 mismatches)
   # A flag "-A" if ALL mappings will be printed; "-E" if ambiguous reads and their mapping are EXCLUDED.
   # An integer to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
   * Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 3 -A}}}
   * Ex: {{{./PerM_P HumanGenome.txt IlluminaReadSim2.txt 2 -E 30}}}
 ====Reference Files====
-PerM concatenates the reference and the read file names to generate the output file name. If this causes  the length of the output file name to exceed the OS limit, rename and limit the length of the reference file names.
+PerM takes single or multiple fasta files as the reference. If there are multiple fasta files, make a list file, say HumanGenome.txt, with each fasta file name in a row. The command line input example is shown above. PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", as input, which typically is a transcriptom. The first word after the ">" will be used as a "Sequence Name" and the read alignments will be showed which "Sequence" and the local position it aligned to. Inside our program, sequence are concatenate each sequence and separated them by "N", so no sequence junction will be aligned. Note PerM concatenates the file name in the list to generate the file name for index. If this causes  the length of the output file name to exceed the OS limit, the index may not be able to be saved.
 
 ====Read Files====
 PerM expects reads from either the SOLiD or Solexa sequencer. If the first read file has the  extension ".csfasta", then all reads are assumed to be from the SOLiD sequencer. Other file types are treated as Solexa data.  Read lengths are assumed to be equal to the first read in the first data file. 
@@ -26,6 +26,7 @@ If quality score file is not available, or the reads and quality scores can't be
 ====Full Sensitivity Thresholds====
 PerM supports full sensitivity for 2, 3, or 4 mismatches as well as sensitivity thresholds specific to the SOLiD sequencer which changes consecutive colors in the presence of a SNP.  The SOLiD specific sensitivity thresholds of  "one SNP candidate + 1 color error" and "two SNP candidates" are denoted as *11* and *20*.  
 Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 11 -E}}}
+PerM outputs alignments with higher number of mismatches, when 5, 6 or 7 are set in this parameter, although no full sensitivity are guaranteed.
 
 ====Include or Exclude Ambiguous Mapping====
 The default setting will exclude the output of ambiguous reads. Use "-A" flag as the forth parameter to output all mappings. In this case, a maximum 100 mapping per read will be print consecutively in the output file. 
@@ -43,7 +44,7 @@ true
 The first two rows are the *Reference* and *Read file*. The third row provides the sensitivity threshold. The fourth rows should be "true" if ambiguous reads are excluded in the output; otherwise, set it false. The fifth row is to reconstruct the index or not.
 The sixth row is to save the index or not. 
 
-=OUTPUT=
+=Output=
 The summary of the mapping results are printed directly to the screen. They include the  number of reads mapped with each number of mismatches and the running time of each step. 
 One can "grep" the summary info by redirect the standard output. 
 ==Index==
@@ -60,6 +61,6 @@ The mapping results are printed in a `*`.mapping file which is named by concaten
 
 Changes are expected in the near future for I/O and options standardization with other mapping programs, especially Applied Biosystems pipeline.
 
-= Paralleled mapping =
+= Paralleled Mapping =
 PerM simultaneously maps multiple reads sets in a list by querying the same index. It will detect how many CPU (cores) are available and assign each CPU a read set, if available. If a read set is finished, the next read set in the list will be assigned to the available CPU automatically. Each read set will have its own output file `*`.mapping. To better utilize all CPUs on a node, large reads are suggested to be split to many small read sets and put in the list. 
 When multiple nodes are used in the same file system, the index should be pre-built first by one node; the other node will read the pre-built index with out building index again. Without pre-built index, each machine will try to build their own index, wasting CPU hours and may cause insufficiency of disk quota. 
