Edited wiki page through web user interface.

--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -15,7 +15,7 @@ The command line options include a reference, a read data set, sensitivity thres
   * Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 3 -A}}}
   * Ex: {{{./PerM_P HumanGenome.txt IlluminaReadSim2.txt 2 -E 30}}}
 ====Reference Files====
-PerM takes single or multiple fasta files as the reference. If there are multiple fasta files, make a list file, say HumanGenome.txt, with each fasta file name in a row. The command line input example is shown above. PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", as input, which typically is a transcriptom. The first word after the ">" will be used as a "Sequence Name" and the read alignments will be showed which "Sequence" and the local position it aligned to. Inside our program, sequence are concatenate each sequence and separated them by "N", so no sequence junction will be aligned. Note PerM concatenates the file name in the list to generate the file name for index. If this causes  the length of the output file name to exceed the OS limit, the index may not be able to be saved.
+PerM takes single or multiple fasta files as the reference. If there are multiple fasta files, make a list file, say HumanGenome`.`txt, with each fasta file name in a row, as the command line input example as above. PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", as input, which typically is a transcriptom. The first word after the ">" will be used as a "Sequence Name" and the read alignments will be showed which "Sequence" and the local position it aligned to. Inside our program, sequence are concatenate each sequence and separated them by "N", so no sequence junction will be aligned. Note PerM concatenates the file name in the list to generate the file name for index. If this causes  the length of the output file name to exceed the OS limit, the index may not be able to be saved.
 
 ====Read Files====
 PerM expects reads from either the SOLiD or Solexa sequencer. If the first read file has the  extension ".csfasta", then all reads are assumed to be from the SOLiD sequencer. Other file types are treated as Solexa data.  Read lengths are assumed to be equal to the first read in the first data file. 
