--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -15,7 +15,7 @@ The command line options include a reference, a read data set, sensitivity thres
   * Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 3 -A}}}
   * Ex: {{{./PerM_P HumanGenome.txt IlluminaReadSim2.txt 2 -E 30}}}
 ====Reference Files====
-PerM takes single or multiple fasta files as the reference. If there are multiple fasta files, make a list file, say {{{HumanGenome.txt}}}, with each fasta file name in a row, as the command line input example as the above. PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", as input which typically is a transcriptom. The first word after ">" will be used as a "Sequence Name", which will be showed with the corresponding alignments. Inside our program, sequences are concatenated and separated by "N", so no junction will be aligned. Note PerM concatenates the file names in the list to generate the file name for index. Limited by OS the system, the index file name could be too long to be saved. 
+PerM takes single or multiple fasta files as the reference. If there are multiple fasta files, make a list file, say {{{HumanGenome.txt}}}, with each fasta file name in a row, as the command line input example as the above. PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", as input which typically is a transcriptom. The first word after ">" will be used as a "Sequence Name", which will be showed with the corresponding alignments. Inside our program, sequences are concatenated and separated by "N", so no junction will be aligned. Only ACGT and N are allowed in the reference file. Other valid nucleotide symbol such as U, R, Y, M, K, S, W, B, D, H, V will be modified to "N" after 0.0.6 version. Note PerM concatenates the file names in the list to generate the file name for index. Limited by OS the system, the index file name could be too long to be saved. 
 
 ====Read Files====
 PerM expects reads from either the SOLiD or Solexa sequencer. If the first read file has the  extension ".csfasta", then all reads are assumed to be from the SOLiD sequencer. Other file types are treated as Solexa data.  Read lengths are assumed to be equal to the first read in the first data file. 
