--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -1,6 +1,6 @@
 #labels Featured
 = Compile =
-Download unzip the source code. (Type gunzip ./PerM0.0.5) in the directory with the download). For Linux and gcc user, type make in the unzip directory to generate the execute file ./PerM. Note, the attached make file is for linux with gcc 4.2 or later. Because OpenMP are supported after gcc 4.2, if your available compiler is earlier version, use an alternative makefile (no openMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. The code has also been test with visual c++ on a Win32 machine, without "openmp".
+Download and unzip the source code. (Type unzip ./PerM\ 0.0.7\ GCC.zip in linux) in the directory with the download). For Linux and gcc user, type make in the unzip directory to generate the execute file ./PerM. Note, the attached make file is for linux with gcc 4.2 or later. Because OpenMP are supported after gcc 4.2, if your available compiler is earlier version, use an alternative makefile (no openMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. The code has also been test with visual c++ on a Win32 machine, without "openmp". 
 
 = Options =
 PerM uses both a configuration file and command line options. The input and configuration files should be in the same path.  
@@ -22,6 +22,8 @@ PerM expects reads from either the SOLiD or Solexa sequencer. If the first read 
 
 For SOLiD reads, PerM will try to read the quality file with the same base name as the read set, however with the ext name ".qual". That is, if the read file name is 7B.csfasta, its quality file "7B.qual" should be put beside.
 If quality score file is not available, or the reads and quality scores can't be matched, only the read sequences will be used. 
+
+(Tips! Use our shell splitReads.sh to split fasta or csfasta file into one million reads per set. It will generate a list file. Use the list file name as the input ptr of PerM.) 
 
 ====Full Sensitivity Thresholds====
 PerM supports full sensitivity for 2, 3, or 4 mismatches as well as sensitivity thresholds specific to the SOLiD sequencer which changes consecutive colors in the presence of a SNP.  The SOLiD specific sensitivity thresholds of  "one SNP candidate + 1 color error" and "two SNP candidates" are denoted as *11* and *20*.  
@@ -64,3 +66,20 @@ Changes are expected in the near future for I/O and options standardization with
 = Paralleled Mapping =
 PerM simultaneously maps multiple reads sets in a list by querying the same index. It will detect how many CPU (cores) are available and assign each CPU a read set, if available. If a read set is finished, the next read set in the list will be assigned to the available CPU automatically. Each read set will have its own output file `*`.mapping. To better utilize all CPUs on a node, large reads are suggested to be split to many small read sets and put in the list. 
 When multiple nodes are used in the same file system, the index should be pre-built first by one node; the other node will read the pre-built index with out building index again. Without pre-built index, each machine will try to build their own index, wasting CPU hours and may cause insufficiency of disk quota. 
+
+= Mate-paired Reads =
+PerM deals with mate-paired reads by mapping each end separately. To keep most information, all combination of mated paired mapping in the same chromosome will be printed. Note this makes the running time become very slow, if both ends are in the repetitive regions. 
+
+The upper bound and the lower bound of the mated-pair separation should be specified in the first line of the read files list, in a format # lowerBound upperBound
+Ex: # 100 180. The following lines should be the file names of read sets
+
+PerM takes two format of paired end reads. 
+(1) Concatenated 5'-3' end 3'-5' fasta file. 
+(2) Two separated file of with _F3 and _R3. Each corresponding line is paired.
+For input format (1), each file name should be listed in a row as single-end read file. 
+For input format (2), the two paired file should be listed together in a row, separated by tab. Ex: reads_F3.csfasta \t reads_R3.csfasta. 
+
+The output is in ABI's F3_R3.mates format.(Described in the SOLiD System Application Document: AB Re-seqeuncing Analysis Pipeline. Page 15)
+
+= Limitation =
+PerM currently will discard any reads with 'N'. Similarly, no reads will be mapped to any reference region with 'N'. This is the reason that users may observe that the total alignments founded by PerM is less than other mappers, given the same full sensitivity threshold. 
