--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -1,5 +1,5 @@
 #labels Featured
-If you have any usage question, please email "yanghoch@usc.edu".
+If you have any usage question, please email "yanghoch at usc.edu".
 
 = Compile =
 Download and unzip the source code. (Type unzip ./PerM\ 0.0.7\ GCC.zip in linux) in the directory with the download). For Linux and gcc user, type make in the unzip directory to generate the execute file ./PerM. Note, the attached make file is for linux with gcc 4.2 or later. Because OpenMP are supported after gcc 4.2, if your available compiler is earlier version, use an alternative makefile (no openMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. The code has also been test with visual c++ on a Win32 machine, without "openmp". 
