--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -84,4 +84,4 @@ For input format (2), the two paired file should be listed together in a row, se
 The output is in the ABI F3_R3\.mates format.(Described in the SOLiD System Application Document: AB Re-sequencing Analysis Pipeline. Page 15)
 
 = Limitation =
-PerM currently support only reads less than 64 base pair. This is enough for the coming SOLiD reads, however it is not enough for current Illumina reads. Set the truncated read length to 64 in the 5th parameter to mapped long reads with their first 64 bases. Currently, PerM will discard any reads with 'N'. Similarly, no reads will be mapped to any reference region with 'N'. This is the reason that users may experience that the total alignments founded by PerM is less than other mappers, given the same full sensitivity threshold. 
+PerM currently supports only reads less than 64 base pair. This is enough for the coming SOLiD reads, however it is not enough for current Illumina reads. Set the truncated read length to 64 in the 5th parameter to mapped long reads with their first 64 bases. Currently, PerM will discard any reads with 'N'. Similarly, no reads will be mapped to any reference region with 'N'. This is the reason that users may experience that the total alignments founded by PerM is less than other mappers, given the same full sensitivity threshold. 
