--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -2,7 +2,7 @@
 If you have any usage question, please email "yanghoch at usc.edu".
 
 = Compile =
-Download and unzip the source code. (Type unzip ./PerM\ 0.0.7\ GCC.zip in linux) in the directory with the download). For Linux and gcc user, type make in the unzip directory to generate the execute file ./PerM. Note, the attached make file is for linux with gcc 4.2 or later. Because OpenMP are supported after gcc 4.2, if your compiler is earlier version, use an alternative makefile (no openMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. The code has also been test with visual c++ on a Win32 machine, without "openmp". 
+Download and unzip the source code. (Type unzip ./PerM\ 0.1.0\ GCC.zip in linux) in the directory with the download). For Linux and gcc user, type make in the unzip directory to generate the execute file ./PerM. Note, the attached make file is for linux with gcc 4.2 or later. Because OpenMP are supported after gcc 4.2, if your compiler is earlier version, use an alternative makefile (no openMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. The code has also been test with visual c++ on a Win32 machine, without "openmp". 
 
 = Options =
 PerM uses both a configuration file and command line options. The input and configuration files should be in the same path.  
@@ -15,9 +15,9 @@ The command line options include a reference, a read data set, sensitivity thres
   # A flag "-A" if ALL mappings will be printed; "-E" if ambiguous reads and their mapping are EXCLUDED.
   # An integer to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
   * Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 3 -A}}}
-  * Ex: {{{./PerM_P HumanGenome.txt IlluminaReadSim2.txt 2 -E 30}}}
+  * Ex: {{{./PerM_P HumanGenome.txt IlluminaReads.txt 2 -E 30}}}
 ====Reference Files====
-PerM takes single or multiple fasta files as the reference. If there are multiple fasta files, make a list file, say {{{HumanGenome.txt}}}, with each fasta file name in a row, as the command line input example as the above. PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", as input which typically is a transcriptom. The first word after ">" will be used as a "Sequence Name", which will be showed with the corresponding alignments. Inside our program, sequences are concatenated and separated by "N", so no junction will be aligned. Only ACGT and N are allowed in the reference file. Other valid nucleotide symbol such as U, R, Y, M, K, S, W, B, D, H, V will be modified to "N" after 0.0.6 version. Note PerM concatenates the file names in the list to generate the file name for index. Limited by OS the system, the index file name could be too long to be saved. 
+PerM takes single or multiple fasta files as the reference. If there are multiple fasta files, make a list file, say {{{HumanGenome.txt}}}, with each fasta file name in a row, as the command line input example as the above. PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", as input which typically is a transcripts or contigs. The first word after ">" will be used as a "Sequence Name", which will be showed with the corresponding alignments. Inside our program, sequences are concatenated and separated by "N", so no junction will be aligned. Only ACGT and N are allowed in the reference file. Other valid nucleotide symbol such as U, R, Y, M, K, S, W, B, D, H, V will be modified to "N" after 0.0.6 version. Note PerM concatenates the file names in the list to generate the file name for index. Limited by OS the system, the index file name could be too long to be saved. 
 
 ====Read Files====
 PerM expects reads from either the SOLiD or Solexa sequencer. If the first read file has the  extension ".csfasta", then all reads are assumed to be from the SOLiD sequencer. Other file types are treated as Solexa data.  Read lengths are assumed to be equal to the first read in the first data file. 
@@ -84,4 +84,9 @@ For input format (2), the two paired file should be listed together in a row, se
 The output is in the ABI F3_R3\.mates format.(Described in the SOLiD System Application Document: AB Re-sequencing Analysis Pipeline. Page 15)
 
 = Limitation =
-PerM currently supports only reads less than 64 base pair. This is enough for the coming SOLiD reads, however it is not enough for current Illumina reads. Set the truncated read length to 64 in the 5th parameter to mapped long reads with their first 64 bases. Currently, PerM will discard any reads with 'N'. Similarly, no reads will be mapped to any reference region with 'N'. This is the reason that users may experience that the total alignments founded by PerM is less than other mappers, given the same full sensitivity threshold. 
+PerM doesn't support SOLiD reads with more than 64 base pair.
+PerM doesn't support single-end Illumina reads with more than 128 base pair.
+PerM doesn't support mate-paired Illumina reads with more than 64 base pair in each end.
+We suggest users to set the truncated read length less than 64 in the 5th parameter to mapped long reads with their first 64 bases. 
+
+Currently, PerM will discard any reads with 'N'. Similarly, no reads will be mapped to any reference region with 'N'. This is the reason that users may experience that the total alignments founded by PerM is less than other mappers, given the same full sensitivity threshold. 
