--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -9,13 +9,20 @@ PerM uses both a configuration file and command line options. The input and conf
 
 == Command Line Options ==  
 The command line options include a reference, a read data set, sensitivity threshold and addition flag options. Parameters should be listed in the the following order: 
-  # Reference File in FASTA format (with .fa or .fasta ext name) or a text file which lists many FASTA files, one in each row.  
-  # A read set in FASTA, PRB or CSFASTA format (with .fa .fasta .prb. csfasta) or a text file which lists many read sets, each read should be separated by a line with its "tag" start with ">". If the tag is missing, PerM will made a fake tag for the read.
-  # An integer for the mapping sensitivity (ie. full sensitivity to 3 mismatches)
-  # A flag "-A" if ALL mappings will be printed; "-E" if ambiguous reads and their mapping are EXCLUDED.
-  # An integer to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
-  * Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 3 -A -s}}}
-  * Ex: {{{./PerM_P HumanGenome.txt IlluminaReads.txt 2 -E -T 30}}}
+  # Reference File in FASTA format with .fa or .fasta ext name. Otherwise, PerM will treat the input file as a list of many FASTA files, one in each row.  
+  # A read set in FASTA, PRB or CSFASTA format with the corresponding ext name. For fasta or csfata format, each read should be separated by a line with its "tag" start with ">".
+PerM chooses different ways to parse the read file based on the ext name. Other ext name will be treated as a file which lists many read sets.
+  # An integer between two to five for the mapping sensitivity (ie. full sensitivity to 3 mismatches). For reads longer than 64 bases, the threshold will be set as the.
+  Ex: ./PerM Ref.fasta Reads.fasta 5 or Ex: ./PerM RefFilesList.txt ReadsSetFilesList.txt 2
+By default, PerM outputs all the best alignments in terms of the mismatches number with in the threshold, end to end. It will try to use the saved index. If not found, reconstruct the index. The following option flag can changed the default setting. 
+Options:
+ # -A     Output all alignments within the mismatch threshold.
+ # -E     Output only the unique mapped reads.
+ # -s     Save the reference index to acclerate the mapping in the future.
+ # -m     Create the reference index, without reused the saved index   
+ # -T L, where L is an integer to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
+ For example {{{./PerM_P anthracis.fasta 7B.csfasta 3 -E -s -T 32}}
+  
 ====Reference Files====
 PerM takes single or multiple fasta files as the reference. If there are multiple fasta files, make a list file, say {{{HumanGenome.txt}}}, with each fasta file name in a row, as the command line input example as the above. PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", as input which typically is a transcripts or contigs. The first word after ">" will be used as a "Sequence Name", which will be showed with the corresponding alignments. Inside our program, sequences are concatenated and separated by "N", so no junction will be aligned. Only ACGT and N are allowed in the reference file. Other valid nucleotide symbol such as U, R, Y, M, K, S, W, B, D, H, V will be modified to "N" after 0.0.6 version. Note PerM concatenates the file names in the list to generate the file name for index. Limited by OS the system, the index file name could be too long to be saved. 
 
