--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -107,6 +107,6 @@ The output is in the ABI F3_R3\.mates format.(Described in the SOLiD System Appl
 PerM doesn't support SOLiD reads with more than 64 base pair.
 PerM doesn't support single-end Illumina reads with more than 128 base pair.
 PerM doesn't support mate-paired Illumina reads with more than 64 base pair in each end.
-We suggest users to set the truncated read length less than 64 in the 5th parameter to mapped long reads with their first 64 bases. 
+We suggest users to set the truncated read length less than 64, using -T 64 to mapped long reads with their first 64 bases. 
 
-Currently, PerM will discard any reads with 'N'. Similarly, no reads will be mapped to any reference region with 'N'. This is the reason that users may experience that the total alignments founded by PerM is less than other mappers, given the same full sensitivity threshold. 
+Currently, PerM will discard any reads with 'N'. Similarly, no reads will be mapped to any reference region with 'N'. This is the reason that users may experience that the total alignments founded by PerM is less than other mappers, given the same full sensitivity threshold. PerM switches di-nucleotide symbol (not ACGT) to N and removed other character from the reference. 
