--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -10,8 +10,8 @@ PerM uses both a configuration file and command line options. The input and conf
 == Command Line Options ==  
 To use command line, type PerM with the args in the order.
 (1) reference file (2)read set (3) mismatch threshold (4) options flags
-
-Ex: {{{./PerM Ref.fasta Reads.fasta 5 -A -s}}} or
+For example:
+{{{./PerM Ref.fasta Reads.fasta 5 -A -s}}} or
 
 {{{./PerM RefFilesList.txt ReadsSetFilesList.txt 2 -E -m}}}
 
